# Kimi-CLI-X

./: .gitignore  .gitmodules  .pre-commit-config.yaml  0001-tiny-optimize.patch  AGENTS.md  BUILD.md  ChangeLog.md  MEMORY.md  README.md  SKILL.md  agent.py  agent.yaml  agent_base.yaml  agent_boss.yaml  agent_full.yaml  agent_read.yaml  agent_subagent.yaml  agent_tools.py  agent_utils.py  agent_worker.yaml  check_result.txt  cli.py  config_example.json  dev.md  interact.py  kimi_agent_cli.py  kimi_utils.py  output.txt  parse-todo-list.py  patch_sdk.py  publish.py  pyproject.toml  system-prompt.txt  toolbox_build_cli.py  why_us.md
.agents/skills/agent/: SKILL.md
.agents/skills/api/: SKILL.md
.agents/skills/default/: SKILL.md
.agents/skills/opcode_api/: SKILL.md
.agents/skills/pyproject/: SKILL.md
.agents/skills/tool/: SKILL.md
.github/workflows/: type-check.yml
.kimix_cache/: skill_config.json
builtin_prompts/: compact.py  summarize.py
docs/: anthropic.json  config.json  deepseek.json  gemini.json  google_genai.json  kimi.json  kimix_server.md  openai_legacy.json  openai_responses.json  vertexai.json  why_us.md
docs/server/: opencode_style_sse.md
docs/todo/: support_vfs.md
docs/tutorials/: 1_quick_start.md  1_quick_start_en.md  2_long_task.md  2_manager.md  2_swarm.md  3_builtin_tools.md  4_skills.md  5_server.md  6_memory.md
example/: custom_llm.py
faiss/: simple_test.py
faiss_usage/: simple_test.py
kimi-cli/: pyproject.toml
kimi-cli/examples/kimi-cli-stream-json/: main.py
kimi-cli/scripts/: cleanup_tmp_sessions.py  telemetry_debug_server.py
kimi-cli/src/kimi_cli/: metadata.py  session.py  session_state.py
kimi-cli/tests/background/: test_manager.py  test_store.py  test_worker.py
kimi-cli/tests/core/: test_dynamic_injection_hooks.py  test_edit_file_plan_mode.py  test_inspect_plan_edit_target.py  test_plan_flag.py  test_session.py  test_session_logging.py  test_session_state.py  test_skill.py  test_skills_prompt.py
kimi-cli/tests/hooks/: test_integration.py  test_runner.py
kimi-cli/tests/tools/: test_additional_dirs.py  test_glob.py  test_grep.py  test_read_file.py  test_todo.py  test_tool_descriptions.py  test_tool_schemas.py
kimi-cli/tests/utils/: test_atomic_json_write.py  test_editor.py  test_file_filter.py  test_pyinstaller_utils.py
kimix_lark_bot/: .gitignore
kimix_lark_bot/kimix_lark_bot/: card_renderer.py  handlers.py  kimix_client.py  process_manager.py
manager/: base.py  company.py  designer.py  programmer.py  worker.py
my_tools/: check_fmt.py  common.py
my_tools/agent/: __init__.py  compact.py
my_tools/background/: __init__.py  utils.py
my_tools/cpp/: __init__.py
my_tools/file/: __init__.py  _state.py  _utils.py  chdir.py  check_json.py  check_xml.py  file_read.py  find_str.py  input.py  kill_process.py  process_tools.py  read.md  run.py  run_sync.py  unused.py  wait_process.py  write_file.py  write_line.py
my_tools/flag/: __init__.py
my_tools/git/: __init__.py
my_tools/img/: __init__.py
my_tools/ls/: __init__.py
my_tools/mkdir/: __init__.py
my_tools/mv/: __init__.py
my_tools/office/: __init__.py
my_tools/pdf/: __init__.py
my_tools/py/: __init__.py  check.py
my_tools/rm/: __init__.py
my_tools/session/: compact.py
my_tools/shell/: __init__.py  bash_to_pwsh.py  bash_toi_pwsh.py  cmd.md  pwsh_to_bash.py
my_tools/skill/: __init__.py  rag.py
my_tools/skill/faiss/: text_search.py
my_tools/todo/: __init__.py  get_todo_list.md  set_todo_list.md
my_tools/web/: fetch_url.py
my_tools/web/web_fetcher/: __init__.py
my_tools/zip/: __init__.py
python_rag/: __init__.py  config.py  demo.py  orchestrator.py
python_rag/embeddings/: __init__.py  base.py  sentence_transformer.py
python_rag/retrievers/: __init__.py  ast_aware.py  base.py  bm25.py  dense.py  graph_rag.py  hybrid.py
python_rag/store/: __init__.py  base.py  chroma_store.py
scripts/: cpp_lint.py  py_lint.py  update_api.py  update_doc.py
skill_rag/: __init__.py  code_loader.py  config.py  document_loaders.py  embedding_cache.py  embeddings.py  example.py  file_tracker.py  hybrid_search.py  loader.py  mmr_diversity.py  pipeline.py  protocols.py  query_optimizer.py  reranker.py  semantic_chunking.py  vector_store.py
src/kimi_agent_sdk/: __init__.py  _session.py
src/kimix/: __init__.py  __main__.py  agent_boss.yaml  agent_searcher.json  agent_searcher.yaml  agent_subagent.json  agent_subagent.yaml  agent_swarm.yaml  agent_tools.py  agent_utils.py  agent_worker.json  agent_worker.yaml  base.py  cli.py  cot.py  default_config.json  kimi_utils.py  summarize.py
src/kimix/cli_impl/: args.py  client.py  commands.py  constants.py  core.py  init.py  main.py  server.py  server_cmds.py  sse_cli.py  utils.py
src/kimix/cli_server/: __init__.py  client.py
src/kimix_manager/: base.py  company.py  designer.py
src/kimix_tools/: summarize.py
src/my_tools/: check_fmt.py  common.py
tests/: test_async_comprehensive.py  test_background_utils.py  test_bash_tools.py  test_builder.py  test_cli_server.py  test_cot.py  test_cpp.py  test_custom_config.py  test_dummy_app.py  test_glob.py  test_grep_local.py  test_process_task.py  test_prompt_str.py  test_read.py  test_read_output.txt  test_read_output2.txt  test_replace.py  test_retrieval_fixes.py  test_run_bash.py  test_search.py  test_skill_analyzer.py  test_swarm.py  test_system_prompt.py  test_todo.py  test_tools_async.py  test_vfs_core.py  test_vfs_integration.py  test_write.py
tests/agent_swarm/: example_swarm.py
tests/memory/: test_embedding.py  test_long_term_memory.py  test_retrieval.py  test_short_term_memory.py  test_system.py  test_tools.py  test_types.py  test_working_memory.py
tests/test_dag/: conftest.py  test_concurrency.py  test_edge_cases.py  test_errors.py  test_integration.py  test_performance.py  test_unit.py
tools/: __init__.py  analyze_folder.py  git_add.py  git_diff.py  summarize.py  syntax_check.py
tools/graph/: __init__.py  analysis_engine.py  main.py  output_manager.py  project_analyzer.py  prompts.py
(+159 files in other folders)
