[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kimi-agent-tools"
version = "0.1.0"
description = "Kimi Agent Tools - Custom tool collection for Kimi Agent SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "kimi-cli",
    "kimi-agent-sdk",
    "kosong",
    "pykaos",
    # Image processing & OCR
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    # Office document processing
    "python-docx>=1.1.0",
    # PDF processing
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "numpy",
    "faiss-cpu",
    "sentence_transformers"
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# All optional dependencies
all = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["my_tools"]

[tool.uv.workspace]
members = [
    "kimi-cli",
    "kimi-cli/packages/kosong",
    "kimi-cli/packages/kaos",
    "kimi-agent-sdk/python",
]

[tool.uv.sources]
kimi-cli = { workspace = true }
kimi-agent-sdk = { workspace = true }
kosong = { workspace = true }
pykaos = { workspace = true }

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
